--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,9 +20,9 @@
           appDropdown>
           <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe<span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li><a href="#">To Shopping List</a></li>
-            <li><a href="#">Edit Recipe</a></li>
-            <li><a href="#">Delete Recipe</a></li>
+            <li><a (click)="onAddToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
+            <li><a (click)="onEditRecipe()" style="cursor: pointer">Edit Recipe</a></li>
+            <li><a style="cursor: pointer">Delete Recipe</a></li>
           </ul>
         </div>
       </div>
@@ -34,6 +34,9 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-          Ingredients
+          <ul class="list-group">
+            <li class="list-group-item"
+              *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}} - {{ingredient.amount}}</li>
+          </ul>
         </div>
       </div>
