--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -10,13 +10,22 @@
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <ng-template [ngIf]="!authService.isAuthenticated()">
+            <li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
+            <li routerLinkActive="active"><a routerLink="/signin">Sign In</a></li>
+        </ng-template>
         <li 
+          *ngIf="authService.isAuthenticated()"
+          style="cursor: pointer;"
+          (click)="onLogOut()"><a>Logout</a></li>
+        <li 
+          *ngIf="authService.isAuthenticated()"
           class="dropdown"
           appDropdown>
           <a class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a style="cursor: pointer;">Save Data</a></li>
-            <li><a style="cursor: pointer;">Fetch Data</a></li>
+            <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
+            <li><a style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
