Set up first reducer and actions
Centralized reducers

Finished up the shopping list reducer
Centralized the reducers
Setup initial auth reducer state
Auth ngrx implemented


store devtools added


Lazy loaded feature state recipes added


Set up recipe reducers


NgRX fully implemented & cleanup

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -10,16 +10,16 @@
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <ng-template [ngIf]="!authService.isAuthenticated()">
+        <ng-template [ngIf]="!(authState | async).authenticated">
             <li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
             <li routerLinkActive="active"><a routerLink="/signin">Sign In</a></li>
         </ng-template>
         <li 
-          *ngIf="authService.isAuthenticated()"
+          *ngIf="(authState | async).authenticated"
           style="cursor: pointer;"
           (click)="onLogOut()"><a>Logout</a></li>
         <li 
-          *ngIf="authService.isAuthenticated()"
+          *ngIf="(authState | async).authenticated"
           class="dropdown"
           appDropdown>
           <a class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
