--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -54,7 +54,7 @@
         <div class="col-xs-12" formArrayName="ingredients">
           <div 
             class="row"
-            *ngFor="let ingredientCtl of recipeForm.get('ingredients').controls; let i = index;"
+            *ngFor="let ingredientCtl of this.recipeForm.get('ingredients')['controls']; let i = index;"
             [formGroupName]="i"
             style="margin-top: 10px;">
             <div class="col-xs-8">
